--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,10 +7,18 @@
 </head>
 <body>
   <header>
-    <h1>dinoblog</h1>
+    <h1>Welcome to dinoblog!</h1>
+    <pre aria-hidden>
+               __
+              / _)
+     _.----._/ /
+    /         /
+ __/ (  | (  |
+/__.-'|_|--|_|
+    </pre>
   </header>
   <main>
-    hello world
+    <a href="/create">Create a blog</a>
   </main>
 </body>
 </html>
