--- a/src/views/blog/post.ejs
+++ b/src/views/blog/post.ejs
@@ -8,17 +8,9 @@
 <body>
   <header>
     <h1><%= title %></h1>
-    <p>by <%= author %> (<%= email %>)</p>
-    <p><%= description %></p>
   </header>
   <main>
-    <% if (posts) { %>
-      <ul>
-        <% posts.forEach(function (post) { %>
-          <li><%= post.title %></li>
-        <% }) %>
-      </ul>
-    <% } %>
+    <p><%= content %></p>
   </main>
 </body>
 </html>
