--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -11,11 +11,11 @@
   </header>
   <main>
     <h2>Success!</h2>
-    <p>Your blog as been created and can be viewed <a href="<%= url %>">here</a>!</p>
+    <p>Your blog as been created and can be viewed <a href="http://<%= subdomain %>.dinoblog.net">here</a>!</p>
 
     <p>The password to edit your content is '<%= password %>'. <b>Don't lose it!</b></p>
 
-    <p>Your site content can be updated at this URL: <a href="<%= url %>/_edit"><%= url %>/_edit</a>. To edit a blog post, simply navigate to the post you wish to edit and append '/_edit' to the URL.</p>
+    <p>Your site content can be updated at this URL: <a href="<a href="<%= subdomain %>/_edit">/_edit"><%= subdomain %>/_edit">/_edit</a>. To edit a blog post, simply navigate to the post you wish to edit and append '/_edit' to the URL.</p>
   </main>
 </body>
 </html>
