--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -15,7 +15,7 @@
 
     <p>The password to edit your content is '<%= password %>'. <b>Don't lose it!</b></p>
 
-    <p>Your site content can be updated at this URL: <a href="<a href="<%= subdomain %>/_edit">/_edit"><%= subdomain %>/_edit">/_edit</a>. To edit a blog post, simply navigate to the post you wish to edit and append '/_edit' to the URL.</p>
+    <p>Your site content can be updated at this URL: <a href="<%= subdomain %>/_edit"><%= subdomain %>.dinoblog.net/_edit</a>. To edit a blog post, simply navigate to the post you wish to edit and append '/_edit' to the URL.</p>
   </main>
 </body>
 </html>
