prefill blog description on edit

--- a/src/views/blog/edit.ejs
+++ b/src/views/blog/edit.ejs
@@ -50,7 +50,7 @@
 
       <label>
         Description
-        <textarea name="description" form="edit-blog-form"></textarea>
+        <textarea name="description" form="edit-blog-form"><%= description %></textarea>
       </label>
       <br>
 
