create layout partials

--- a/src/views/blog/blog.ejs
+++ b/src/views/blog/blog.ejs
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('../partials/site-head') -%>
+
 <body>
-  <%- include('../partials/site-header') -%>
+  <%- include('../partials/blog-header') -%>
 
   <main>
     <h2>Blog posts</h2>
@@ -27,4 +22,5 @@
     <% } %>
   </main>
 </body>
-</html>
+
+<%- include('../partials/site-footer') -%>
