--- a/src/views/blog/edit-success.ejs
+++ b/src/views/blog/edit-success.ejs
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('../partials/site-head') -%>
+
 <body>
   <header>
-    <h1>Success</h1>
+    <h1>Success!</h1>
     <%- include('../partials/blog-nav') -%>
   </header>
 
@@ -15,4 +10,5 @@
     Your blog has been updated.
   </main>
 </body>
-</html>
+
+<%- include('../partials/site-footer') -%>
