--- a/src/views/status.ejs
+++ b/src/views/status.ejs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>oops</title>
-</head>
+<%- include('./partials/site-head') -%>
+
 <body>
   <header>
-    <h1>dinoblog</h1>
-  </header>
-  <main>
     <pre aria-hidden>
                __
               / _)
@@ -18,8 +10,12 @@
  __/ (  | (  |
 /__.-'|_|--|_|
     </pre>
-
+    <h1>Uh oh</h1>
+  </header>
+  <main>
     <p>That's not supposed to happen. <a href="/">Back to home.</a></p>
   </main>
 </body>
 </html>
+
+<%- include('./partials/site-footer') -%>
