--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('./partials/site-head') -%>
+
 <body>
   <header>
-    <h1>dinoblog</h1>
+    <%- include('./partials/dino') -%>
+    <h1>Success!</h1>
   </header>
   <main>
-    <h2>Success!</h2>
     <p>Your blog as been created and can be viewed <a href="http://<%= subdomain %>.dinoblog.net">here</a>!</p>
 
     <p>The password to edit your content is '<%= password %>'. <b>Don't lose it!</b></p>
@@ -18,4 +13,5 @@
     <p>Your site content can be updated at this URL: <a href="<%= subdomain %>/_edit"><%= subdomain %>.dinoblog.net/_edit</a>. To edit a blog post, simply navigate to the post you wish to edit and append '/_edit' to the URL.</p>
   </main>
 </body>
-</html>
+
+<%- include('./partials/site-footer') -%>
