--- a/src/views/blog/index.ejs
+++ b/src/views/blog/index.ejs
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('../partials/site-head') -%>
+
 <body>
-  <%- include('../partials/site-header') -%>
+  <%- include('../partials/blog-header') -%>
 
   <main>
     <p><%= description %></p>
   </main>
 </body>
 </html>
+
+<%- include('../partials/site-footer') -%>
