--- a/src/views/blog/new.ejs
+++ b/src/views/blog/new.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('../partials/site-head') -%>
+
 <body>
   <header>
     <h1>New post</h1>
@@ -52,4 +47,5 @@
     </form>
   </main>
 </body>
-</html>
+
+<%- include('../partials/site-footer') -%>
