--- a/src/views/blog/post.ejs
+++ b/src/views/blog/post.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('../partials/site-head') -%>
+
 <body>
   <%- include('../partials/blog-header') -%>
 
@@ -13,4 +8,5 @@
     <p><%= content %></p>
   </main>
 </body>
-</html>
+
+<%- include('../partials/site-footer') -%>
