--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dinoblog</title>
-</head>
+<%- include('./partials/site-head') -%>
+
 <body>
   <header>
-    <h1>dinoblog</h1>
-    <h2>Create your own blog</h2>
+    <%- include('./partials/dino') -%>
+    <h1>Create your own blog</h1>
   </header>
   <main>
     <form action="/" method="POST" id="create-blog-form">
@@ -63,3 +58,5 @@
   </main>
 </body>
 </html>
+
+<%- include('./partials/site-footer') -%>
