link latex-like stylesheet

--- a/src/views/partials/site-head.ejs
+++ b/src/views/partials/site-head.ejs
@@ -4,4 +4,5 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><% if (locals.title) { %><%= title %><% } else { %>dinoblog<% } %></title>
+  <link rel="stylesheet" href="https://latex.now.sh/style.min.css" />
 </head>
