--- a/src/views/status.ejs
+++ b/src/views/status.ejs
@@ -2,7 +2,7 @@
 
 <body>
   <header>
-    <pre aria-hidden>
+    <pre aria-hidden style="background: none;">
                __
               / _)
      _.----._/ /
