--- a/src/views/blog/new.ejs
+++ b/src/views/blog/new.ejs
@@ -9,8 +9,10 @@
     <form action="/_new" method="POST" id="new-post-form">
       <label>
         Title
+        <br>
         <input
           name="title"
+          placeholder="Awesome Post"
           type="text"
           required
         >
@@ -19,8 +21,10 @@
 
       <label>
         Slug
+        <br>
         <input
           name="slug"
+          placeholder="awesome-post"
           type="text"
           required
         >
@@ -29,12 +33,14 @@
 
       <label>
         Content
-        <textarea name="content" form="new-post-form"></textarea>
+        <br>
+        <textarea name="content" form="new-post-form" placeholder="Dinos are awesome"></textarea>
       </label>
       <br>
 
       <label>
         Password
+        <br>
         <input
           name="password"
           type="password"
