parse md content

--- a/src/views/blog/edit.ejs
+++ b/src/views/blog/edit.ejs
@@ -47,7 +47,7 @@
       <br>
 
       <label>
-        Description
+        Front-page content (markdown)
         <br>
         <textarea name="description" form="edit-blog-form"><%= description %></textarea>
       </label>
