--- a/src/views/blog/index.ejs
+++ b/src/views/blog/index.ejs
@@ -4,7 +4,7 @@
   <%- include('../partials/blog-header') -%>
 
   <main>
-    <p><%= description %></p>
+    <p><%- description %></p>
   </main>
 </body>
 </html>
