--- a/src/views/blog/new.ejs
+++ b/src/views/blog/new.ejs
@@ -32,7 +32,7 @@
       <br>
 
       <label>
-        Content
+        Content (markdown)
         <br>
         <textarea name="content" form="new-post-form" placeholder="Dinos are awesome"></textarea>
       </label>
