--- a/src/views/blog/post-edit.ejs
+++ b/src/views/blog/post-edit.ejs
@@ -33,7 +33,7 @@
       <br>
 
       <label>
-        Content
+        Content (markdown)
         <br>
         <textarea name="content" form="edit-post-form"><%= content %></textarea>
       </label>
