--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -56,7 +56,7 @@
       <br>
 
       <label>
-        Front-page content
+        Front-page content (markdown)
         <br>
         <textarea name="description" form="create-blog-form" placeholder="An awesome blog about awesome things"></textarea>
       </label>
